--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -18,10 +18,12 @@
     font-size: var(--tiny-font-size);
 }
 .about_description{
-    padding: 0 4rem 0 0;
+    padding: 0 2rem 0 0;
     margin-bottom: var(--mb-2-5);
     line-height:  25px; 
+    margin-top: 25px;
 }
+
 @media screen and (max-width: 992px){
    .about_container{
     grid-template-columns: 1fr;
@@ -44,8 +46,13 @@
   
   @media screen and (max-width: 576px){
     .about_description{
-        padding: 0;
+        margin-left: 20px;
+        margin-right: 20px;
+        padding: 5px;
     }
-    
+
+    .button{
+        margin-left: 20px;
+    }
   }
 }
