--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -49,7 +49,8 @@ nav{
 
 .nav_list{
     display: flex;
-    column-gap: 1rem;
+    column-gap: 2.5rem;
+    margin-right: -80px;
 }
 
 .nav_close,
@@ -60,6 +61,7 @@ nav{
 .active-link,
 .nav_link:hover{
     color: var(--title-color-dark);
+
 }
 
 .whatsapp-icon {
@@ -122,14 +124,23 @@ nav{
     }
   
     .nav_icon {
-        display:flex;
-      font-size: 1.5rem;
-      transition: transform 0.3s ease, box-shadow 0.3s ease; 
-    }
-
-    .nav_icon:hover {
-        transform: scale(1.2); /* Increase size to 120% */
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Optional: Add a slight shadow to create a pop effect */
+        display: inline-block;
+        font-size: 1.5rem; /* Adjust size as needed */
+        transition: transform 0.5s ease, color 0.3s ease; /* Smooth transition for transform and color */
+        color: black;
+      }
+      
+      .nav_icon.active {
+        color: #001eff; /* Highlight active icon */
+      }
+      
+      .nav_icon:hover {
+        transform: rotate(360deg); /* Rotate on hover */
+        color: #000000; /* Hover effect */
+      }
+      
+      .nav_link.active-link {
+        color: #001eff; /* Highlight active section link */
       }
   
     .nav_menu {
